# grpc_opencv_image_example

./: .gitignore  CMakeLists.txt
cpp/: detect_client.cpp
cpp/proto-src/: detection.grpc.pb.cc  detection.grpc.pb.h  detection.pb.cc  detection.pb.h
protos/: detection.proto
python/src/: client_test.py  server.py
python/src/detection_proto/: cv_img_converter.py  detection_pb2.py  detection_pb2_grpc.py
python/src/detector/: cv_detector.py  idetector.py
